--- a/AndroidStudioProjects/MentalHealthApp3/app/src/main/AndroidManifest.xml
+++ b/AndroidStudioProjects/MentalHealthApp3/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mentalhealthapp3">
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -11,6 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MentalHealthApp3">
+        <activity
+            android:name=".popUpMoodWindow"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
